Implement sub source for WebGL2's clearBuffer*().

Conformance test is uploaded: https://github.com/KhronosGroup/WebGL/pull/2364

BUG=708730
TEST=conformance2/rendering/clearbuffer-sub-source.html
R=kbr@chromium.org,kainino@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2809873003
Cr-Commit-Position: refs/heads/master@{#464246}

Former-commit-id: 67caee99605db7a1bde5ea88de2f8425672b0931